<resources>
    <string name="app_name">Energy Controll</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Energy Controll</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_getdata">Get Task</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="enterButton">Войти</string>
    <string name="password">Пароль</string>
    <string name="e_mail">E-mail</string>
    <string name="enterTitle">Вход</string>
    <string name="invalid_email">Email is not valid</string>
    <string name="User_Home">Страница пользователя</string>
    <string name="get_tasks">Получить задачи</string>
    <string name="objects_tps">Objects TPs</string>
    <string name="abonents_list">Abonents List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mtr_list">MTR List</string>
    <string name="mtr_detail">MTR Detail</string>
    <string name="logOut">LogOut</string>
    <string name="problem_login">Have some problem with login please try later or contact with support</string>
    <string-array name="situation_array">
        <item>Обычно</item>
        <item>Нестандартная ситуация</item>
    </string-array>
</resources>