<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tateknew.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/getData"
        android:name="com.example.tateknew.ui.getData.getDataFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/objectListFragment"
        android:name="com.example.tateknew.ui.getData.ObjectListFragment"
        android:label="Object List"
        tools:layout="@layout/fragment_object_list">
        <action
            android:id="@+id/action_objectListFragment_to_objectDetailFragment"
            app:destination="@id/objectDetailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/objectDetailFragment"
        android:name="com.example.tateknew.ui.getData.ObjectDetailFragment"
        android:label="Object Detail"
        tools:layout="@layout/fragment_object_detail">
        <argument
            android:name="objectId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.tateknew.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.tateknew.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>